boreal/tests/assets/invalid_files/compilation/invalid_identifier_index_type.yar
// [error: expected an expression of type integer]
import "tests"

rule a {
    condition:
        tests.integer_array["a"] == 3
}
